Slightly bridge the gap between this branch and fixed-size-image.

--- a/css/index.css
+++ b/css/index.css
@@ -48,6 +48,7 @@ select {
   z-index:  -65567;
   display:  inline-block;
   cursor:   crosshair;
+  overflow: hidden;
 }
 
 .background {
